--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ development:
   database: site_development
   pool: 5
   timeout: 5000
-  username: gillybean1
+  username: gillybean
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -20,11 +20,11 @@ test:
   database: site_test
   pool: 5
   timeout: 5000
-  username: gillybean1
+  username: gillybean
 
 production:
   adapter: postgresql
   database: site_production
   pool: 5
   timeout: 5000
-  username: gillybean1
+  username: gillybean
